# pybtas

./: .gitignore  CMakeLists.txt  README.md  conda_env.yml  pyproject.toml  setup.py  test_pybtas.py
src/: main.cpp
src/pybtas/: __init__.py  main.cpp
tests/: test_pybtas.py
